# AutoHotVoice

./: .buildinfo  .gitignore  README.md  autohotvoice.html  autohotvoice.py  genindex.html  getting_started.html  index.html  main.py  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  speech_log.txt  test2.py
.doctrees/: autohotvoice.doctree  environment.pickle  getting_started.doctree  index.doctree  modules.doctree
.github/workflows/: docs-workflow  docs-workflow.yml  pylint.yml
_sources/: getting_started.md.txt  index.rst.txt
docs/source/: autohotvoice.rst  conf.py  modules.rst
src/: audiorecorder.py  autohotvoice.py
src/autohotvoice/: audiorecorder.py  autohotvoice.py  geminithingamie.py
tests/: test_audiorecorder.py
