[tool.poetry]
name = "autohotvoice"
version = "0.1.0"
description = "A tool to automate computer control via deepgram and gemini!"
authors = ["Aditya Shankar <awesomeadityashankar@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
aenum = "3.1.15"
aiofiles = "24.1.0"
aiohappyeyeballs = "2.4.3"
aiohttp = "3.11.7"
aiosignal = "1.3.1"
annotated-types = "0.7.0"
anyio = "4.6.2.post1"
attrs = "24.2.0"
cachetools = "5.5.0"
certifi = "2024.8.30"
charset-normalizer = "3.4.0"
dataclasses-json = "0.6.7"
deepgram-sdk = "3.7.7"
deprecation = "2.1.0"
frozenlist = "1.5.0"
google-ai-generativelanguage = "0.6.10"
google-api-core = "2.23.0"
google-api-python-client = "2.154.0"
google-auth = "2.36.0"
google-auth-httplib2 = "0.2.0"
google-generativeai = "0.8.3"
googleapis-common-protos = "1.66.0"
grpcio = "1.68.0"
grpcio-status = "1.68.0"
h11 = "0.14.0"
httpcore = "1.0.7"
httplib2 = "0.22.0"
httpx = "0.27.2"
idna = "3.10"
keyboard = "0.13.5"
marshmallow = "3.23.1"
multidict = "6.1.0"
mypy-extensions = "1.0.0"
packaging = "24.2"
propcache = "0.2.0"
proto-plus = "1.25.0"
protobuf = "5.28.3"
pyasn1 = "0.6.1"
pyasn1-modules = "0.4.1"
pydantic = "2.10.1"
pydantic-core = "2.27.1"
pyobjc = "10.3.1"
pyobjc-core = "10.3.1"
pyobjc-framework-accessibility = "10.3.1"
pyobjc-framework-accounts = "10.3.1"
pyobjc-framework-addressbook = "10.3.1"
pyobjc-framework-adservices = "10.3.1"
pyobjc-framework-adsupport = "10.3.1"
pyobjc-framework-applescriptkit = "10.3.1"
pyobjc-framework-applescriptobjc = "10.3.1"
pyobjc-framework-applicationservices = "10.3.1"
pyobjc-framework-apptrackingtransparency = "10.3.1"
pyobjc-framework-audiovideobridging = "10.3.1"
pyobjc-framework-authenticationservices = "10.3.1"
pyobjc-framework-automaticassessmentconfiguration = "10.3.1"
pyobjc-framework-automator = "10.3.1"
pyobjc-framework-avfoundation = "10.3.1"
pyobjc-framework-avkit = "10.3.1"
pyobjc-framework-avrouting = "10.3.1"
pyobjc-framework-backgroundassets = "10.3.1"
pyobjc-framework-browserenginekit = "10.3.1"
pyobjc-framework-businesschat = "10.3.1"
pyobjc-framework-calendarstore = "10.3.1"
pyobjc-framework-callkit = "10.3.1"
pyobjc-framework-cfnetwork = "10.3.1"
pyobjc-framework-cinematic = "10.3.1"
pyobjc-framework-classkit = "10.3.1"
pyobjc-framework-cloudkit = "10.3.1"
pyobjc-framework-cocoa = "10.3.1"
pyobjc-framework-collaboration = "10.3.1"
pyobjc-framework-colorsync = "10.3.1"
pyobjc-framework-contacts = "10.3.1"
pyobjc-framework-contactsui = "10.3.1"
pyobjc-framework-coreaudio = "10.3.1"
pyobjc-framework-coreaudiokit = "10.3.1"
pyobjc-framework-corebluetooth = "10.3.1"
pyobjc-framework-coredata = "10.3.1"
pyobjc-framework-corehaptics = "10.3.1"
pyobjc-framework-corelocation = "10.3.1"
pyobjc-framework-coremedia = "10.3.1"
pyobjc-framework-coremediaio = "10.3.1"
pyobjc-framework-coremidi = "10.3.1"
pyobjc-framework-coreml = "10.3.1"
pyobjc-framework-coremotion = "10.3.1"
pyobjc-framework-coreservices = "10.3.1"
pyobjc-framework-corespotlight = "10.3.1"
pyobjc-framework-coretext = "10.3.1"
pyobjc-framework-corewlan = "10.3.1"
pyobjc-framework-cryptotokenkit = "10.3.1"
pyobjc-framework-datadetection = "10.3.1"
pyobjc-framework-devicecheck = "10.3.1"
pyobjc-framework-dictionaryservices = "10.3.1"
pyobjc-framework-discrecording = "10.3.1"
pyobjc-framework-discrecordingui = "10.3.1"
pyobjc-framework-diskarbitration = "10.3.1"
pyobjc-framework-dvdplayback = "10.3.1"
pyobjc-framework-eventkit = "10.3.1"
pyobjc-framework-exceptionhandling = "10.3.1"
pyobjc-framework-executionpolicy = "10.3.1"
pyobjc-framework-extensionkit = "10.3.1"
pyobjc-framework-externalaccessory = "10.3.1"
pyobjc-framework-fileprovider = "10.3.1"
pyobjc-framework-fileproviderui = "10.3.1"
pyobjc-framework-findersync = "10.3.1"
pyobjc-framework-fsevents = "10.3.1"
pyobjc-framework-gamecenter = "10.3.1"
pyobjc-framework-gamecontroller = "10.3.1"
pyobjc-framework-gamekit = "10.3.1"
pyobjc-framework-gameplaykit = "10.3.1"
pyobjc-framework-healthkit = "10.3.1"
pyobjc-framework-imagecapturecore = "10.3.1"
pyobjc-framework-inputmethodkit = "10.3.1"
pyobjc-framework-installerplugins = "10.3.1"
pyobjc-framework-instantmessage = "10.3.1"
pyobjc-framework-intents = "10.3.1"
pyobjc-framework-intentsui = "10.3.1"
pyobjc-framework-iobluetooth = "10.3.1"
pyobjc-framework-iobluetoothui = "10.3.1"
pyobjc-framework-iosurface = "10.3.1"
pyobjc-framework-ituneslibrary = "10.3.1"
pyobjc-framework-kernelmanagement = "10.3.1"
pyobjc-framework-latentsemanticmapping = "10.3.1"
pyobjc-framework-launchservices = "10.3.1"
pyobjc-framework-libdispatch = "10.3.1"
pyobjc-framework-libxpc = "10.3.1"
pyobjc-framework-linkpresentation = "10.3.1"
pyobjc-framework-localauthentication = "10.3.1"
pyobjc-framework-localauthenticationembeddedui = "10.3.1"
pyobjc-framework-mailkit = "10.3.1"
pyobjc-framework-mapkit = "10.3.1"
pyobjc-framework-mediaaccessibility = "10.3.1"
pyobjc-framework-medialibrary = "10.3.1"
pyobjc-framework-mediaplayer = "10.3.1"
pyobjc-framework-mediatoolbox = "10.3.1"
pyobjc-framework-metal = "10.3.1"
pyobjc-framework-metalfx = "10.3.1"
pyobjc-framework-metalkit = "10.3.1"
pyobjc-framework-metalperformanceshaders = "10.3.1"
pyobjc-framework-metalperformanceshadersgraph = "10.3.1"
pyobjc-framework-metrickit = "10.3.1"
pyobjc-framework-mlcompute = "10.3.1"
pyobjc-framework-modelio = "10.3.1"
pyobjc-framework-multipeerconnectivity = "10.3.1"
pyobjc-framework-naturallanguage = "10.3.1"
pyobjc-framework-netfs = "10.3.1"
pyobjc-framework-network = "10.3.1"
pyobjc-framework-networkextension = "10.3.1"
pyobjc-framework-notificationcenter = "10.3.1"
pyobjc-framework-opendirectory = "10.3.1"
pyobjc-framework-osakit = "10.3.1"
pyobjc-framework-oslog = "10.3.1"
pyobjc-framework-passkit = "10.3.1"
pyobjc-framework-pencilkit = "10.3.1"
pyobjc-framework-phase = "10.3.1"
pyobjc-framework-photos = "10.3.1"
pyobjc-framework-photosui = "10.3.1"
pyobjc-framework-preferencepanes = "10.3.1"
pyobjc-framework-pushkit = "10.3.1"
pyobjc-framework-quartz = "10.3.1"
pyobjc-framework-quicklookthumbnailing = "10.3.1"
pyobjc-framework-replaykit = "10.3.1"
pyobjc-framework-safariservices = "10.3.1"
pyobjc-framework-safetykit = "10.3.1"
pyobjc-framework-scenekit = "10.3.1"
pyobjc-framework-screencapturekit = "10.3.1"
pyobjc-framework-screensaver = "10.3.1"
pyobjc-framework-screentime = "10.3.1"
pyobjc-framework-scriptingbridge = "10.3.1"
pyobjc-framework-searchkit = "10.3.1"
pyobjc-framework-security = "10.3.1"
pyobjc-framework-securityfoundation = "10.3.1"
pyobjc-framework-securityinterface = "10.3.1"
pyobjc-framework-sensitivecontentanalysis = "10.3.1"
pyobjc-framework-servicemanagement = "10.3.1"
pyobjc-framework-sharedwithyou = "10.3.1"
pyobjc-framework-sharedwithyoucore = "10.3.1"
pyobjc-framework-shazamkit = "10.3.1"
pyobjc-framework-social = "10.3.1"
pyobjc-framework-soundanalysis = "10.3.1"
pyobjc-framework-speech = "10.3.1"
pyobjc-framework-spritekit = "10.3.1"
pyobjc-framework-storekit = "10.3.1"
pyobjc-framework-symbols = "10.3.1"
pyobjc-framework-syncservices = "10.3.1"
pyobjc-framework-systemconfiguration = "10.3.1"
pyobjc-framework-systemextensions = "10.3.1"
pyobjc-framework-threadnetwork = "10.3.1"
pyobjc-framework-uniformtypeidentifiers = "10.3.1"
pyobjc-framework-usernotifications = "10.3.1"
pyobjc-framework-usernotificationsui = "10.3.1"
pyobjc-framework-videosubscriberaccount = "10.3.1"
pyobjc-framework-videotoolbox = "10.3.1"
pyobjc-framework-virtualization = "10.3.1"
pyobjc-framework-vision = "10.3.1"
pyobjc-framework-webkit = "10.3.1"
pyparsing = "3.2.0"
requests = "2.32.3"
rsa = "4.9"
sniffio = "1.3.1"
tqdm = "4.67.0"
typing-inspect = "0.9.0"
typing-extensions = "4.12.2"
uritemplate = "4.1.1"
urllib3 = "2.2.3"
websockets = "13.1"
yarl = "1.18.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
format = "black:main"