[tool.poetry]
name = "autohotvoice"
version = "0.1.0"
description = "A tool to automate computer control via deepgram and gemini!"
authors = ["Aditya Shankar <awesomeadityashankar@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aenum = "3.1.15"
aiofiles = "24.1.0"
aiohappyeyeballs = "2.4.3"
aiohttp = "3.11.7"
aiosignal = "1.3.1"
annotated-types = "0.7.0"
anyio = "4.6.2.post1"
attrs = "24.2.0"
cachetools = "5.5.0"
certifi = "2024.8.30"
charset-normalizer = "3.4.0"
dataclasses-json = "0.6.7"
deepgram-sdk = "3.7.7"
deprecation = "2.1.0"
frozenlist = "1.5.0"
google-ai-generativelanguage = "0.6.10"
google-api-core = "2.23.0"
google-api-python-client = "2.154.0"
google-auth = "2.36.0"
google-auth-httplib2 = "0.2.0"
google-generativeai = "0.8.3"
googleapis-common-protos = "1.66.0"
grpcio = "1.68.0"
grpcio-status = "1.68.0"
h11 = "0.14.0"
httpcore = "1.0.7"
httplib2 = "0.22.0"
httpx = "0.27.2"
idna = "3.10"
keyboard = "0.13.5"
marshmallow = "3.23.1"
multidict = "6.1.0"
mypy-extensions = "1.0.0"
packaging = "24.2"
propcache = "0.2.0"
proto-plus = "1.25.0"
protobuf = "5.28.3"
pyasn1 = "0.6.1"
pyasn1-modules = "0.4.1"
pydantic = "2.10.1"
pydantic-core = "2.27.1"
pyparsing = "3.2.0"
requests = "2.32.3"
rsa = "4.9"
sniffio = "1.3.1"
tqdm = "4.67.0"
typing-inspect = "0.9.0"
typing-extensions = "4.12.2"
uritemplate = "4.1.1"
urllib3 = "2.2.3"
websockets = "13.1"
yarl = "1.18.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.3"
poethepoet = "^0.31.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
format = "black ."